功能修改优化