@@ -1,5 +1,6 @@
 package io.tiklab.kaelthas.db.history.service;
 
+import com.mchange.lang.LongUtils;
 import io.tiklab.kaelthas.db.graphics.model.DbGraphics;
 import io.tiklab.kaelthas.db.graphics.service.DbGraphicsService;
 import io.tiklab.kaelthas.db.graphicsMonitor.model.DbGraphicsMonitor;
@@ -13,12 +14,14 @@ import io.tiklab.kaelthas.util.ConversionDateUtil;
 import io.tiklab.kaelthas.util.ConversionScriptsUtils;
 import io.tiklab.kaelthas.util.SqlUtil;
 import io.tiklab.kaelthas.util.TableUtil;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -44,7 +47,7 @@ public class DbHistoryServiceImpl implements DbHistoryService {
     public void insertForList(List<DbHistory> entityList) {
 
         //获取数据库表名
-        String dbTableName = TableUtil.getDbTableName(0);
+        String dbTableName = TableUtil.getDbTableName(LocalDate.now(),0);
 
         List<Map<String, Object>> mapList = getMapList(entityList);
         //拼接添加历史的数据的sql
@@ -121,28 +124,15 @@ public class DbHistoryServiceImpl implements DbHistoryService {
 
     @Override
     public List<DbHistory> findDbHistoryByTime(String beforeTime) {
-        String dbTableName = TableUtil.getDbTableName(0);
+        String dbTableName = TableUtil.getDbTableName(LocalDate.now(),0);
         List<DbHistory> historyList = dbHistoryDao.findDbHistoryByTime(beforeTime, dbTableName);
         return historyList;
     }
 
-    @Override
-    public List<DbHistory> findInformationToGatherTime(String dbId, String beforeDateTime) {
-        List<DbHistory> dbHistoryList = dbHistoryDao.findInformationToGatherTime(dbId, beforeDateTime);
-        return dbHistoryList;
-    }
 
     @Override
-    public List<DbHistory> findHistoryByGatherTime(String dbId, String beforeTime) {
-        return dbHistoryDao.findHistoryByGatherTime(dbId, beforeTime);
-    }
-
-    /**
-     * 根据监控数据库的id和时间查询时间之后的存储数据
-     */
-    @Override
-    public List<DbHistory> findDbHistoryByDbId(String dbId, String beforeTime) {
-        return dbHistoryDao.findDbHistoryByDbId(dbId, beforeTime);
+    public List<DbHistory> findInHistoryByGatherTime(String dbId, String beforeTime,String expression) {
+        return dbHistoryDao.findInHistoryByGatherTime(dbId, beforeTime,expression);
     }
 
 
@@ -154,75 +144,143 @@ public class DbHistoryServiceImpl implements DbHistoryService {
 
     public List<List<DbHistory>> joinMonitorHistoryData(DbHistoryQuery dbHistoryQuery,int data){
         List<List<DbHistory>> resList = new ArrayList<>();
-        List<String> timeList = new ArrayList<>();
-        List<String> dataList = new ArrayList<>();
+
+        //客服端传入的开始时间
+        String beginTime = dbHistoryQuery.getBeginTime();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        LocalDateTime beginLocalTime = LocalDateTime.parse(beginTime, formatter);
+
 
         //根据id查询图形列表
         List<DbGraphics> graphicsList = dbGraphicsService.findDbGraphicsList(dbHistoryQuery.getDbId());
 
         //计算两个时间中间的时间点
-        List<String> xTime = ConversionDateUtil.splitTime(dbHistoryQuery.getBeginTime(), dbHistoryQuery.getEndTime(), data);
+        //List<String> xTime = ConversionDateUtil.splitTime(dbHistoryQuery.getBeginTime(), dbHistoryQuery.getEndTime(), data);
         for (DbGraphics graphics : graphicsList) {
             //查询出每个图表下的监控项
             List<DbGraphicsMonitor> dbGraphicsMonitorList = dbGraphicsMonitorService.findMonitors(graphics.getId());
 
             List<DbHistory> list = new LinkedList<>();
             for (DbGraphicsMonitor graphicsMonitor : dbGraphicsMonitorList) {
+                List<String> timeList = new ArrayList<>();
+                List<String> dataList = new ArrayList<>();
 
                 //通过监控项id查询监控历史记录
                 dbHistoryQuery.setMonitorId(graphicsMonitor.getMonitorId());
 
                 //通过监控项id和时间段查询历史
                 int endName = TableUtil.getHistoryEndName(data);
-                String dbTableName = TableUtil.getDbTableName(endName);
-                List<DbHistory> dbHistories = dbHistoryDao.findHistoryByDbMonitorId(dbHistoryQuery,dbTableName);
+
+                LocalDate localDate = LocalDate.parse(beginTime, formatter);
+                String dbTableName = TableUtil.getDbTableName(localDate,endName);
+
+                //根据对应查询时间段，向前添加时间
+                addOneTime(dbHistoryQuery,data);
 
                 DbHistory dbHistory = new DbHistory();
+                //图形名称
                 dbHistory.setGraphicsName(graphicsMonitor.getGraphicsName());
+                //监控项名字
+                dbHistory.setName(graphicsMonitor.getMonitorName());
+
+
+                List<DbHistory> dbHistories = dbHistoryDao.findHistoryByDbMonitorId(dbHistoryQuery,dbTableName);
+
                 if (!dbHistories.isEmpty()) {
                     dbHistories = dbHistories.stream().sorted(Comparator.comparing(DbHistory::getGatherTime))
                             .collect(Collectors.toList());
 
-                    //监控项名字
-                    dbHistory.setName(dbHistories.get(0).getMonitorName());
 
                     //设置告警信息
                     setTriggerService(dbHistories, dbHistory);
 
+                    int number=0;
+                    int addNum=0;
                     for (int i=0;i<dbHistories.size();i++){
-                        String gatherTime = dbHistories.get(i).getGatherTime();
-                        String reportData = dbHistories.get(i).getReportData();
+                        DbHistory history = dbHistories.get(i);
+                        String gatherTime = history.getGatherTime();
+                        String reportData = history.getReportData();
 
-                        if (i==0){
-                            //查询的数据第一个时间不等于客户端传入的开始时间 添加内容为null
-                            if (!dbHistoryQuery.getBeginTime().equals(gatherTime)){
-                                timeList.add(dbHistoryQuery.getBeginTime());
-                                dataList.add("null");
-                            }else {
-                                timeList.add(gatherTime);
-                                dataList.add(reportData);
+                        //查询监控数据库的历史时间点 在客户端传入的时间前直接跳过
+                        LocalDateTime localDateTime = LocalDateTime.parse(gatherTime, formatter);
+                        if (localDateTime.isBefore(beginLocalTime)){
+                            number+=1;
+                            continue;
+                        }
+
+                        addNum+=1;
+                        long l=0L;
+                        if (number>0||i>0){
+                            //当前数据减去前面历史记录的数据
+                            String befReportData = dbHistories.get(i-1).getReportData();
+                            if (!("null").equals(reportData)&&!("null").equals(befReportData)){
+                                l = Long.parseLong(reportData) - Long.parseLong(befReportData);
                             }
                         }
+
                         if (i==dbHistories.size()-1){
                             //查询的数据最后一个时间不等于客户端传入的结束时间 添加内容为null
                             if (!dbHistoryQuery.getEndTime().equals(gatherTime)){
                                 timeList.add(dbHistoryQuery.getEndTime());
-                                dataList.add("null");
+                                dataList.add("0");
+                            }else {
+                                timeList.add(gatherTime);
+                                dataList.add(String.valueOf(l));
+                            }
+                        }else {
+                            if (i==0&&number==0){
+                                //查询的数据第一个时间不等于客户端传入的开始时间 添加内容为null
+                                if (!beginTime.equals(gatherTime)){
+                                    timeList.add(beginTime);
+                                    dataList.add("0");
+                                }else {
+                                    timeList.add(gatherTime);
+                                    dataList.add(reportData);
+                                }
+                            }else {
+                                // 第一次执行且i!=0的时候 开始时间取beginTime
+                               if (addNum==1){
+                                   gatherTime=beginTime;
+                               }
+                                timeList.add(gatherTime);
+                                dataList.add(String.valueOf(l));
+                            }
+                        }
+
+                     /*   if (i==0){
+                            //查询的数据第一个时间不等于客户端传入的开始时间 添加内容为null
+                            if (!beginTime.equals(gatherTime)){
+                                timeList.add(dbHistoryQuery.getBeginTime());
+                                dataList.add("0");
                             }else {
                                 timeList.add(gatherTime);
                                 dataList.add(reportData);
                             }
+                        }else if (i==dbHistories.size()-1){
+                            //查询的数据最后一个时间不等于客户端传入的结束时间 添加内容为null
+                            if (!dbHistoryQuery.getEndTime().equals(gatherTime)){
+                                timeList.add(dbHistoryQuery.getEndTime());
+                                dataList.add("0");
+                            }else {
+                                timeList.add(gatherTime);
+                                dataList.add(String.valueOf(l));
+                            }
                         }else {
                             timeList.add(gatherTime);
-                            dataList.add(reportData);
-                        }
+                            dataList.add(String.valueOf(l));
+                        }*/
                     }
                     //时间段内数据添加时间、数据
                     dbHistory.setData(dataList);
                     dbHistory.setDataTimes(timeList);
                 } else {
+                    //没有历史记录数据,只需要添加开始时间和结束时间
+                    dataList.add("null");
+                    dataList.add("null");
+                    timeList.add(dbHistoryQuery.getBeginTime());
+                    timeList.add(dbHistoryQuery.getEndTime());
                     dbHistory.setData(dataList);
-                    dbHistory.setDataTimes(xTime);
+                    dbHistory.setDataTimes(timeList);
                 }
                 list.add(dbHistory);
             }
@@ -314,7 +372,39 @@ public class DbHistoryServiceImpl implements DbHistoryService {
             map.put("report_data", history.getReportData());
             map.put("gather_time", history.getGatherTime());
             return map;
-        }).toList();
+        }).collect(Collectors.toList());
+
+
+    }
+
+
+    /**
+     * 开始时间 向前添加时间
+     * @param dbHistoryQuery 数据库历史
+     * @param data 查询的时间段   1:5分钟内、2:60分钟内、 3:720分钟内、4:其他的
+     */
+    public String addOneTime(DbHistoryQuery dbHistoryQuery,int data){
+        String beginTime = dbHistoryQuery.getBeginTime();
+        // 定义时间格式
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+        // 将字符串转换为 LocalDateTime
+        LocalDateTime now = LocalDateTime.parse(beginTime, formatter);
+        LocalDateTime localDateTime;
+        switch (data){
+            case 1,2:
+                 localDateTime = now.minusMinutes(1);
+                break;
+            case 3:
+                localDateTime = now.minusMinutes(5);
+                break;
+            default:
+                localDateTime = now.minusMinutes(15);
+                break;
+        }
+        String format = localDateTime.format(formatter);
+        dbHistoryQuery.setBeginTime(format);
+        return format;
     }
 
 
